leaderboard files added

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -13,6 +13,7 @@
             {{#if user}}
               <li role="presentation"><a href="/question">Questions</a></li>
               <li role="presentation"><a href="/users/logout">Logout</a></li>
+              <li role="presentation"><a href="/leaderboard">Leaderboard</a></li>
             {{else}}
               <li role="presentation"><a href="/users/login">Login</a></li>
               <li role="presentation"><a href="/users/register">Register</a></li>
